@@ -1,3 +1,12 @@
+2012-01-05  Jeffrey Stedfast  <jeff@xamarin.com>
+
+	Fixes for bug #667137.
+
+	* tests/Makefile.am: If any tests fail, exit with an error to abort make.
+
+	* tests/testsuite.c (testsuite_exit): Simply return
+	total_errors.
+
 2012-01-05  Jeffrey Stedfast  <fejj@gnome.org>
 
 	Fixes for bug #667072.
